Style resources page in colour blocks, make quiz responsive, fix whitespace before background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
 }
 body {
   margin: 0;
+  height: 100vh;
+  background-color: #f5f5f5;
+}
+
+#body-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url("../images/tech-girl.jpg");
   background-position: center;
@@ -88,10 +93,11 @@ span {
 h2.title {
   text-align: center;
   color: #152B34;
-  font-size: 300%;
+  font-size: 3em;
   font-family: 'Arial Narrow', Helvetica, sans-serif;
   text-transform: uppercase;
-  text-shadow: -1px -1px 0 #CAF0F8, 1px -1px 0 #CAF0F8, -1px 1px 0 #CAF0F8, 1px 1px 0 #CAF0F8;
+  margin: 0;
+  padding: 40px;
 }
 
 .horizontal-center {
@@ -102,14 +108,14 @@ h2.title {
 }
 
 #quiz-container {
-  border: 4px solid #caf0f8;
+  border: 1px solid #caf0f8;
   border-radius: 5px;
-  background-color: rgba(11, 82, 91, 0.8);
+  background-color: #0b525b;
   color: #fff;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
-  box-shadow: 2px 2px;
+  box-shadow: 5px 2px;
 }
 
 #quiz ul {
@@ -360,14 +366,13 @@ label {
 
 .resources-card {
   margin: 0 auto;
-  border: 2px solid #caf0f8;
-  border-radius: 15px;
-  background-color: rgba(11, 82, 91, 0.8);
+  border-radius: 5px;
+  background-color: #0b525b;
   color: #fff;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
-  width: 80%;
+  width: 90%;
   padding: 30px;
 }
 
@@ -387,14 +392,55 @@ label {
   text-align: justify;
 }
 
+.resources-card a {
+  text-decoration: none;
+}
+
+.women {
+  background-color: #f5f5f5;
+  color: black;
+  margin: 0 -30px;
+  padding: 0 30px;
+  overflow: hidden;
+}
+
+.resources {
+  clear: both;
+}
+
+.button-resources {
+  display: inline-block;
+  margin: 0 20px;
+}
+
+.buttons {
+  text-align: center;
+}
 
 
 /*  MEDIA QUERY */
 @media only screen and (max-width: 800px) {
-  body {
+  #body-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
       url("../images/tech-girl-mobile.jpg");
   }
+
+  .horizontal-center {
+    width: 90%;
+  }
+
+  h2.title {
+    font-size: 2.2em;
+  }
+
+  #question {
+    font-size: 1.2em;
+  }
+
+  #quiz-container {
+    font-size: 1em;
+  }
+
 }
 @media only screen and (max-width: 600px) {
   .hero-text {
